fix: Fixed bad width on superjump animation.

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -6,6 +6,7 @@
 
 .filterListContainer {
   width: 100%;
+  min-width: calc(90vmin - 60px);
   max-height: 100vh;
   overflow-y: auto;
   display: flex;
@@ -16,7 +17,7 @@
 }
 
 .emptyFilterList {
-  width: auto;
+  width: calc(100% - 20px);
   height: calc(100vh - 20px);
   max-height: 100vh;
   margin: 10px;
