--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,7 +246,6 @@ textarea {
   background-color: var(--popout-background);
   margin: 30px 0;
   width: fit-content;
-  max-width: 100%;
   border-radius: 15px;
   padding: 15px;
 }
